Rename from html to njk

--- a/index.njk
+++ b/index.njk
@@ -87,7 +87,7 @@
 </head>
 
 <body class="bg-[var(--bee-bg)] text-[var(--bee-charcoal)]">
-    {% include "navbar.html" %}
+    {% include "navbar.njk" %}
 
 
     <!-- Welcome Section -->
@@ -139,7 +139,7 @@
     </section>
 
     <!-- Footer -->
-    {% include "footer.html" %}
+    {% include "footer.njk" %}
 
 
     <!-- JavaScript -->
