--- a/contacts.njk
+++ b/contacts.njk
@@ -94,7 +94,7 @@ permalink: "contacts.html"
 <body class="bg-[var(--bee-bg)] text-[var(--bee-charcoal)]">
 
     <!-- Header -->
-    {% include "navbar.njk" %}
+    {% include "navbar.html" %}
 
     <!-- Contact Section -->
     <section class="py-20">
@@ -141,7 +141,7 @@ permalink: "contacts.html"
     </section>
 
     <!-- Footer -->
-    {% include "footer.njk" %}
+    {% include "footer.html" %}
 
     <!-- Scripts -->
     <script>
