--- a/gallery.njk
+++ b/gallery.njk
@@ -93,7 +93,7 @@ permalink: "gallery.html"
 <body class="text-[var(--bee-charcoal)] bg-[var(--bee-bg)]">
 
     <!-- Header -->
-    {% include "navbar.njk" %}
+    {% include "navbar.html" %}
 
     <!-- Gallery Hero -->
     <section class="relative w-full bg-no-repeat bg-top sm:bg-center bg-contain sm:bg-cover"
@@ -124,7 +124,7 @@ permalink: "gallery.html"
     </section>
 
     <!-- Footer -->
-    {% include "footer.njk" %}
+    {% include "footer.html" %}
 
     <!-- JavaScript -->
     <script>
